# svelte5-examples

./: .gitignore  README.md
animate/: README.md  package-lock.json  package.json
auth/: package-lock.json  package.json
balloon/: README.md  package-lock.json  package.json
bird/: README.md  package-lock.json  package.json  tailwind.config.js
calc/: README.md  package-lock.json  package.json
cat-images/: README.md  package-lock.json  package.json  svelte.config.js
classes/: README.md  index.html  package-lock.json  package.json
context/: README.md  index.html  package-lock.json  package.json
dungeons/: README.md  package-lock.json  package.json
ease-visualiser/: README.md  package-lock.json  package.json
fake-screen/: README.md  package-lock.json  package.json
form/: README.md  index.html  package-lock.json  package.json
hello/: .gitignore  README.md  package-lock.json  package.json
minesweeper/: README.md  index.html  package-lock.json  package.json  vite.config.js
module/: README.md  package-lock.json  package.json
ornekler/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
paint/: README.md  package.json
paint-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
paint2/: README.md  package-lock.json  package.json
pdf-editor/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
pdf-editor5/: .prettierrc  README.md  package-lock.json  package.json
pin-code-input/: README.md  (+2 more)
rust-upload/: Cargo.toml
rust-upload/src/: main.rs
(+261 files in other folders)
