[package]
name = "rust-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
actix-cors = "0.7"
env_logger="0.11"
log = "0.4"
futures = "0.3"
tokio = {version="1", features= ["fs", "rt-multi-thread"]}